--- a/index.html
+++ b/index.html
@@ -46,7 +46,25 @@
 </header>
 <body>
     <section>
-        <div> </div>
+        <div class="section1" > 
+             <div class="left-div"> 
+                <div class="text-div"> 
+                    <h4 class="about2"> ABOUT US</h4>
+                    <h2 class="trust">Trust and quality are our atuus</h2>
+                    <p class="paragraph"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur eos, omnis voluptas beatae at magnam natus facilis maxime reprehenderit, nisi veritatis, voluptate dolorem dicta. Quod nisi facere ipsam iste veritatis.
+                    </p>
+                    <p class="paragraph"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus vitae culpa eum dolorem voluptatum nam ullam corrupti modi blanditiis iusto, officia nemo vel architecto consequatur, nesciunt minima doloremque repudiandae non?
+                    </p>
+                    
+                </div>
+                <a class="more" href="#"> <div class="readmore"> read more</div> </a>
+            </div>
+        <div class="right-div">
+            <img src="images/ledder.jpg" alt="ledder">
+            <img src="images/ocean.jpg" alt="ocean">
+            <img src="images/palm.jpg" alt="palm">
+        </div>
+        </div>
         
     </section>
 
